# ur5_robotic_arm

./: CMakeLists.txt  README.md  package.xml
launch/: bringup_gazebo_ur5.launch.py
src/: robot_movement_node.cpp
urdf/: ur5_urdf.xacro
